tests/miniJava/neg/006711_mutation.MiniJava
class java { public static void this Main ( String [ ] java ) { { } } }
